--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@walery/stencil-aws-account-resolver",
   "description": "Stencil blocks to resolve account name and related values of AWS account",
-  "version": "0.0.2",
+  "version": "0.0.4-SNAPSHOT.0",
   "devDependencies": {
     "xo": "0.53.1"
   },
