--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "Stencil blocks to resolve account name and related values of AWS account",
   "version": "0.0.4-SNAPSHOT.0",
   "devDependencies": {
+    "ava": "5.3.1",
+    "nyc": "15.1.0",
     "xo": "0.55.1"
   },
   "files": [
@@ -20,6 +22,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/walery/stencil-aws-account-resolver.git"
+  },
+  "scripts": {
+    "test": "nyc ava",
+    "test:coverageReport": "npm test && nyc report --reporter=html"
   },
   "xo": {
     "space": true
